dev/test_programs/INVALID/group1/exp10.go
package main

func main(){
	var x int = 4;
	if x =!= 4 {
		print("test");
	}
}
